src/objects/QPMS__FiveWhy__c.object
<CustomObject>
    <description>Five Why</description>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName+&apos; &apos;+TEXT(DATETIMEVALUE(LastModifiedDate))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>General Task</description>
        <label>General Task</label>
        <referenceTo>QPMS__General_Task__c</referenceTo>
        <relationshipLabel>FiveWhys</relationshipLabel>
        <relationshipName>FiveWhys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__HowSummary__c</fullName>
        <label>How Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__How__c</fullName>
        <defaultValue>false</defaultValue>
        <label>How</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__LastModifiedBy__c</fullName>
        <formula>LastModifiedBy.FirstName+&apos; &apos;+ LastModifiedBy.LastName+&apos; &apos;+ TEXT(DATETIMEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NonConformance_Id__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonConformance Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Summary__c</fullName>
        <description>Summary</description>
        <label>Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>FiveWhy</label>
    <nameField>
        <displayFormat>FW-{0000}</displayFormat>
        <label>FiveWhy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FiveWhys</pluralLabel>
    <recordTypes>
        <fullName>QPMS__How</fullName>
        <active>true</active>
        <description>How</description>
        <label>How</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Why</fullName>
        <active>true</active>
        <description>Why</description>
        <label>Why</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>